# moon

./: .gitignore  README.md
MoonCpp/: CMakeLists.txt
MoonCpp/example/: main.ml
MoonCpp/g4/: Moon.g4
MoonCpp/src/: main.cpp  psi.h  types.h
MoonCpp/src/base/: BytecodeCompiler.cpp  BytecodeCompiler.h  Console.cpp  Console.h  Evaluation.cpp  Evaluation.h  Evaluator.cpp  Evaluator.h  MoonCompileErrorListener.h  MoonScriptEngine.cpp  MoonScriptEngine.h  PsiBuilder.cpp  PsiBuilder.h  PsiElementEvaluation.cpp  PsiElementEvaluation.h  PsiUtils.cpp  PsiUtils.h  Runtime.cpp  Runtime.h  SyntaxError.h  VirtualMachine.cpp  VirtualMachine.h
MoonCpp/src/debug/: Debugger.cpp  Debugger.h
MoonCpp/src/ds/: RealNumber.cpp  RealNumber.h
MoonCpp/src/eval/: UnaryEvaluation.cpp  UnaryEvaluation.h
MoonCpp/src/gc/: Variable.cpp  Variable.h
MoonCpp/src/moon/: Console.cpp  Console.h
MoonCpp/src/psi/: AssignmentExpression.cpp  AssignmentExpression.h  BinaryExpression.cpp  BinaryExpression.h  BlockStatement.cpp  BlockStatement.h  BreakStatement.cpp  BreakStatement.h  CallExpression.cpp  CallExpression.h  CatchStatement.cpp  CatchStatement.h  ClassDeclaration.cpp  ClassDeclaration.h  ContinueStatement.cpp  ContinueStatement.h  Declaration.h  DynamicMemberExpression.cpp  DynamicMemberExpression.h  Expression.h  ForStatement.cpp  ForStatement.h  FunctionDeclaration.cpp  FunctionDeclaration.h  Identifier.cpp  Identifier.h  IfStatement.cpp  IfStatement.h  Literal.cpp  Literal.h  LoopStatement.h  MemberExpression.cpp  MemberExpression.h  NewExpression.cpp  NewExpression.h  ParseTreeTraverser.cpp  ParseTreeTraverser.h  Program.cpp  Program.h  PsiBuilder.cpp  (+23 more)
MoonCpp/src/scope/: BuiltinProvider.h  Organizer.cpp  Organizer.h  Scope.cpp  Scope.h  Symbol.cpp  Symbol.h  SymbolProvider.cpp  SymbolProvider.h
MoonCpp/src/vars/: ArrayValue.cpp  ArrayValue.h  BaseValue.cpp  BaseValue.h  BooleanValue.cpp  BooleanValue.h  BuiltinFunctionValue.cpp  BuiltinFunctionValue.h  CallableValue.cpp  CallableValue.h  DeclarativeClassValue.cpp  DeclarativeClassValue.h  DeclarativeFunctionValue.cpp  DeclarativeFunctionValue.h  DeclarativeObjectValue.cpp  DeclarativeObjectValue.h  IValue.cpp  IValue.h  MethodValue.cpp  MethodValue.h  NumberValue.cpp  NumberValue.h  ObjectValue.cpp  ObjectValue.h  Ref.cpp  Ref.h  StringValue.cpp  StringValue.h  ValueSystem.cpp  ValueSystem.h  values.h
MoonTypeScript/: Arch.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
MoonTypeScript/lib/: moon.min.ts  moonlang.ts
MoonTypeScript/src/: main.ts
MoonTypeScript/src/3rd/: builtin_http.ts
MoonTypeScript/src/data/: ast.json  main.ml
MoonTypeScript/src/fonts/: fonts-support.css
MoonTypeScript/src/ide/: HSliderWindows.vue  MPlatform.vue  MultiWindow.vue  SvgOf.vue  VSliderWindows.vue  WindowSlider.vue  codemirror.css
MoonTypeScript/src/moon/: ast.ts  engine.ts  eval.ts  index.ts  interpreter.ts  lite.ts  psi.ts  psiutils.ts  scope.ts  valuesystem.ts  vm.ts
doc/: arch.drawio
